# jqflober

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
jqflober/: __main__.py
