[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "jqflober"
version = "0.0.1"
description = ""
authors = [{ name = "Florents Tselai", email = "florents.tselai@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = []

[tool.scikit-build]
minimum-version = "0.9"
cmake.define.BUILD_SHARED_LIBS = false
cmake.version = ">=3.28"
wheel.packages = ["py"]
wheel.py-api = "py3"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]

#[tool.cibuildwheel]
#test-command = [
#    "jq -h",
#    "python -m jqflober -h",
#]
environment.MACOSX_DEPLOYMENT_TARGET = "10.12"

